--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/animated.css">
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="animated.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;0,800;1,800&family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet"> 
 
-    <title>Curriculum</title>
+    <title>Curriculum Vitae</title>
 </head>
 <body>
     <header>
         <div class="overlay"></div>
         <div class="absolut">
-            <h1 class="animated jackInTheBox">CUrriculum Vitae</h1>
+            <h1 class="animated jackInTheBox">Desarrollo de Software</h1>
         </div>
         <video onloadedmetadata="this.muted=true" autoplay loop>
            <source src="video/video (1).mp4" > 
